[project]
name = "clasify-bullying"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.5.3",
    "kagglehub>=1.0.1",
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
]
